--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@emotion/styled": "^11.9.3",
 		"framer-motion": "^6.3.16",
 		"mongodb": "^4.1.3",
+		"mongoose": "^6.4.2",
 		"next": "latest",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
