--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^1.8.8",
@@ -17,5 +18,11 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.4.0"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "<=12.1.5",
+		"jest": "^28.1.2",
+		"jest-environment-jsdom": "^28.1.2"
 	}
 }
