--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"test": "jest --watch"
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage",
+		"test:coverage-watch": "jest --coverage --watch"
 	},
 	"dependencies": {
 		"@chakra-ui/react": "^1.8.8",
